--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.6.0",
+    "sonner": "^2.0.3",
     "tailwind-scrollbar-hide": "^2.0.0"
   },
   "devDependencies": {
